# rust_gen_programming

./: Cargo.toml
src/: config.rs  gen_events.rs  gen_logic.rs  gen_loop.rs  gen_render.rs  main.rs
src/logic/: get_at.rs  init.rs  mod.rs  step.rs  utils.rs
src/models/: action.rs  agent.rs  coord.rs  direction.rs  food.rs  gen.rs  mod.rs  state.rs
src/nn/: get.rs  input.rs  mod.rs  network.rs  output.rs
src/render/: agents.rs  board.rs  food.rs  mod.rs  walls.rs
