[package]
name = "rust_gen_programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["gfx", "use-vcpkg", "static-link"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "9edb1b8e590cc086563301d735cae4b6e732d2d2"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }